--- a/src/python/scripts/config.ini
+++ b/src/python/scripts/config.ini
@@ -2,6 +2,7 @@
 root_section_id =
 test_it_base_url = https://testit.{your_domain}/api/v2
 project_id =
+token =
 
 [CollectionsParams]
 path_with_collections = full path to \\collections\\after
