test_it_methods with config interaction enhance

--- a/src/python/scripts/config.ini
+++ b/src/python/scripts/config.ini
@@ -3,7 +3,9 @@ root_section_id =
 test_it_base_url = https://testit.{your_domain}/api/v2
 project_id =
 token =
+test_run_id =
+configuration_id =
 
 [CollectionsParams]
-path_with_collections = full path to \\collections\\after
+path_with_collections = full path to collections to parse o sync in test it
 path_for_single_collections = full path to \\collections\\parsed
